Update FileManagerTest.